--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,16 @@ h3 {
 }
 a{
   color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  margin: 40px 20px;
+  text-decoration: none;
+}
+a:hover{
+  text-decoration: underline;
+}
+p{
+  line-height: 2;
 }
 
 .html{
@@ -46,8 +56,7 @@ a{
   border-radius: 100%;
   height: 150px;
   width: 150px;
-  position: relative;
-  top: 10px;
+
 }
 
 .top-container {
@@ -55,7 +64,9 @@ a{
   position: relative;
   padding-top: 100px;
 }
-
+.middle-container{
+  margin: 100px 0;
+}
 .top-cloud {
   position: absolute;
   right: 300px;
@@ -72,7 +83,7 @@ a{
   width: 50%;
   margin: 100px auto 100px;
   text-align: left;
-  line-height: 2;
+
 }
 
 hr{
@@ -84,21 +95,33 @@ hr{
   margin-bottom: 75px;
   margin-top: 75px;
 }
-.btn{
-    margin: 80px 0 80px 0;
-   -webkit-border-radius: 20px;
-   -moz-border-radius: 20px;
-   border-radius: 20px;
-   color: #FFFFFF;
-   font-size: 16px;
-   font-weight: 100;
-   padding: 20px;
-   background-color: #66BFBF;
-   border : none;
-   text-decoration: none;
-   display: inline-block;
-   cursor: pointer;
-   text-align: center;
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  color: #ffffff;
+  font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  position: relative;
+  top: 35px;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
 }
 .contact-me{
   line-height: 2;
@@ -107,11 +130,12 @@ hr{
   background-color: #66BFBF;
   padding: 40px;
 }
-.footer-link{
-  text-decoration: none;
-  margin: 40px 20px;
-  color: #11999E;
-}
+
 .bottom-container p{
   margin-top: 40px;
+  font-family: 'Montserrat', sans-serif;
+}
+.profile p{
+  width: 500px;
+  margin: 0 auto;
 }
